--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="sidebar">
-    <ul>
-      <li><a class="active" href="index.html">Dashboard</a></li>
-      <li><a href="candidatos.html">Candidatos</a></li>
-      <li><a href="recrutadoras.html">Recrutadoras</a></li>
-      <li><a href="mapas.html">Mapas</a></li>
-    </ul>
+  <div class="container">
+    <div class="sidebar">
+      <ul>
+        <li class="active"><a href="index.html">Dashboard</a></li>
+        <li><a href="candidatos.html">Candidatos</a></li>
+        <li><a href="recrutadores.html">Recrutadoras</a></li>
+        <li><a href="mapas.html">Mapas</a></li>
+      </ul>
+    </div>
+    <div class="content">
+      <header>
+        <h1>Análise de Recrutamento & Seleção</h1>
+      </header>
+      <main>
+        <!-- Conteúdo principal -->
+      </main>
+    </div>
   </div>
-
-<div>
-  <header>
-    <h1>Análise de Recrutamento & Seleção</h1>
-  </header>
-</div>
 </body>
 </html>
