--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="recrutadores.html">Recrutadoras</a></li>
         <li><a href="mapas.html">Mapas</a></li>
       </ul>
+    </div>
       <header>
         <h1>Análise de Recrutamento & Seleção</h1>
       </header>
