--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <ul>
         <li class="active"><a href="index.html">Dashboard</a></li>
         <li><a href="candidatos.html">Candidatos</a></li>
-        <li><a href="recrutadores.html">Recrutadoras</a></li>
+        <li><a href="recrutadoras.html">Recrutadoras</a></li>
         <li><a href="mapas.html">Mapas</a></li>
       </ul>
     </div>
