--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="sidebar">
-      <ul>
-        <li class="active"><a href="index.html">Dashboard</a></li>
-        <li><a href="candidatos.html">Candidatos</a></li>
-        <li><a href="recrutadoras.html">Recrutadoras</a></li>
-        <li><a href="mapas.html">Mapas</a></li>
-      </ul>
-    </div>
-      <header>
-        <h1>Análise de Recrutamento & Seleção</h1>
-      </header>
+  <div class="sidebar">
+    <ul>
+      <li><a class="active" href="index.html">Dashboard</a></li>
+      <li><a href="candidatos.html">Candidatos</a></li>
+      <li><a href="recrutadoras.html">Recrutadoras</a></li>
+      <li><a href="mapas.html">Mapas</a></li>
+    </ul>
+  </div>
+  <header>
+    <h1>Análise de Recrutamento & Seleção</h1>
+  </header>
 </body>
 </html>
